<resources>
    <string name="app_name">COVID-19</string>

    <string name="last_update">Last update</string>
    <string name="confirmed">Confirmed</string>
    <string name="recovered">Recovered</string>
    <string name="critical">Critical</string>
    <string name="deaths">Deaths</string>

    <string name="statistics">Statistics</string>
    <string name="global">Global</string>
    <string name="settings">Settings</string>
    <string name="home_page">Home page</string>

</resources>